Bug 335169 - Kerberos ktutil man page shows wrong content
Summary: Kerberos ktutil man page shows wrong content
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: man (other bugs)
Version First Reported In: 4.13.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-22 04:50 UTC by Martin Koller
Modified: 2018-08-24 16:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 14.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2014-05-22 04:50:05 UTC
In the krb5-client package there is a command named ktutil.
The man page contains lines with
.SH COMMANDS
.SS list
.INDENT 0.0
.INDENT 3.5

the .INDENT lines render in kio_man as

0.0
3.5

but these lines should not be shown at all.
man ktutil shows

COMMANDS
   list
          list


Reproducible: Always
Comment 1 Martin Koller 2015-01-06 19:04:58 UTC
Git commit 9adf51fd59eea6082a0aff8514bb633d7a6655c0 by Martin Koller.
Committed on 06/01/2015 at 18:56.
Pushed by mkoller into branch 'Applications/14.12'.

Do not output arguments from expression while evaluating them

Man pages contain macro calls with arguments, e.g.
.INDENT 0.0
(in cmake or in ktutil man pages)
The bug was with the evaluation of the argument of the macro, which
was printed while evaluating it, which should not be done.
FIXED-IN: 14.12.1

M  +47   -50   kioslave/man/man2html.cpp

http://commits.kde.org/kde-runtime/9adf51fd59eea6082a0aff8514bb633d7a6655c0
Comment 2 Martin Koller 2018-08-24 16:15:01 UTC
Git commit 87d8ab4371149c84794f4e93d1f590f7bac5f327 by Martin Koller.
Committed on 24/08/2018 at 15:00.
Pushed by mkoller into branch 'master'.

Fwd port: Do not output arguments from expression while evaluating them

forward port of 9adf51fd59eea6082a0aff8514bb633d7a6655c0
from old kde-runtime repo

Original commit text:
Do not output arguments from expression while evaluating them

Man pages contain macro calls with arguments, e.g.
.INDENT 0.0
(in cmake or in ktutil man pages)
The bug was with the evaluation of the argument of the macro, which
was printed while evaluating it, which should not be done.

M  +2    -0    man/CMakeLists.txt
M  +44   -49   man/man2html.cpp
M  +1    -1    man/tests/CMakeLists.txt

https://commits.kde.org/kio-extras/87d8ab4371149c84794f4e93d1f590f7bac5f327