Do not output arguments from expression while evaluating them

Man pages contain macro calls with arguments, e.g.
.INDENT 0.0
(in cmake or in ktutil man pages)
The bug was with the evaluation of the argument of the macro, which
was printed while evaluating it, which should not be done.

BUG: 335169
FIXED-IN: 14.12.1